--- a/L3-Ex3-CSS-Inline.html
+++ b/L3-Ex3-CSS-Inline.html
@@ -4,12 +4,28 @@
 <head>
   <style>
     h1 { color: maroon; margin-left: 40px; }
-    p { font-size: 16px; border: 1px dotted red; }
+    p { font-size: 16px; border: 1px dotted darkgreen; background-color: blue;}
   </style>
 </head>
 
 <body>
-  <h1>Heading</h1>
-  <p>Some text</p>
+    <h1>Heading</h1>
+    <p>Some text</p>
+
+    <h1>All of the testing is for this course.</h1>
+
+    <p>Let's talk about money.</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>Cash Floooooooooooooooow!</p>
 </body>
 </html>
