--- a/L3-Ex4-CSS-Linked.html
+++ b/L3-Ex4-CSS-Linked.html
@@ -1,12 +1,79 @@
 ﻿<!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="l3-ex4-css-linked.css">
-</head>
+    <link rel="stylesheet" type="text/css" href="l3-ex4-css-linked.css">
+    <meta charset="utf-8">
+    <title>Coloring Alternate Table Row Using CSS</title>
+    <style>
+        table {
+            margin: 30px;
+            border-collapse: collapse;
+        }
 
+            table tr {
+                border-bottom: 1px solid #666;
+            }
+
+                table tr:nth-child(2n) {
+                    background: red;
+                }
+
+            table th, table td {
+                padding: 10px;
+            }
+    </style>
+</head>
 <body>
-  <h1>Heading</h1>
-  <p>Some text</p>
+    <h1>Heading</h1>
+    <p>Some text</p>
+
+    <h1>All of the testing is for this course.</h1>
+
+    <p>Let's make a table.</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+    <p>$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$</p>
+
+   
+
+    <table>
+        <tr>
+            <th>Row</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>John</td>
+            <td>Carter</td>
+            <td>johncarter@mail.com</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Peter</td>
+            <td>Parker</td>
+            <td>peterparker@mail.com</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>John</td>
+            <td>Rambo</td>
+            <td>johnrambo@mail.com</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Harry</td>
+            <td>Potter</td>
+            <td>harrypotter@mail.com</td>
+        </tr>
+    </table>
 </body>
 </html>
