--- a/L3-Ex5-CSS-Selectors.html
+++ b/L3-Ex5-CSS-Selectors.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="l1-ex4-css-linked.css">
+  <link rel="stylesheet" type="text/css" href="l3-ex5-css-selectors.css">
 </head>
 
 <body>
